--- a/app/views/layouts/_view_layouts_base_content.html.erb
+++ b/app/views/layouts/_view_layouts_base_content.html.erb
@@ -9,4 +9,13 @@
             </script>
         <% end %>
     <% end %>
+<% else %>
+    <% if Setting.plugin_redmine_rtmaterial['default_colors'] != "" %>
+        <link rel="stylesheet" href="/themes/RTMaterial/stylesheets/colors/<%= Setting.plugin_redmine_rtmaterial['default_colors'] %>.css" type="text/css" />
+        <script>
+            $(document).ready(function() {
+                $("head").find("link[rel='shortcut icon']")[0].href = "/themes/RTMaterial/stylesheets/ico/icon-<%= Setting.plugin_redmine_rtmaterial['default_colors'].split('-')[1] %>.ico";
+            });
+        </script>
+    <% end %>
 <% end %>
