--- a/app/views/layouts/_view_layouts_base_content.html.erb
+++ b/app/views/layouts/_view_layouts_base_content.html.erb
@@ -1,12 +1,11 @@
-<% if !@project.nil? %>
-    <% if @project.custom_field_values.find(ifnone = ""){ |f| f.custom_field.name == 'RTMaterial' }.value != nil %>
-        <% if @project.custom_field_values.find(ifnone = ""){ |f| f.custom_field.name == 'RTMaterial' }.value.length > 0 %>
-            <link rel="stylesheet" href="/themes/RTMaterial/stylesheets/colors/<%= @project.custom_field_values.find{ |f| f.custom_field.name == 'RTMaterial' }.value %>.css" type="text/css" />
-            <script>
-                $(document).ready(function() {
-                    $("head").find("link[rel='shortcut icon']")[0].href = "/themes/RTMaterial/stylesheets/ico/icon-<%= @project.custom_field_values.find{ |f| f.custom_field.name == 'RTMaterial' }.value.split('-')[1] %>.ico";  
-                });
-            </script>
-        <% end %>
-    <% end %>
+<%
+color_scheme = !@project.nil? && !@project.rtmaterial_style.nil? && @project.rtmaterial_style != "" ? @project.rtmaterial_style : Setting.plugin_redmine_rtmaterial['default_colors']
+%>
+<% if !color_scheme.nil? && color_scheme != "" %>
+    <link rel="stylesheet" href="/themes/RTMaterial/stylesheets/colors/<%= color_scheme %>.css" type="text/css" />
+    <script>
+        $(document).ready(function() {
+            $("head").find("link[rel='shortcut icon']")[0].href = "/themes/RTMaterial/stylesheets/ico/icon-<%= color_scheme.split('-')[1] %>.ico";
+        });
+    </script>
 <% end %>
