--- a/app/views/settings/_rtmaterial.html.erb
+++ b/app/views/settings/_rtmaterial.html.erb
@@ -2,11 +2,18 @@
 <p>
   <label><%= l(:setting_default_colors) %></label>
   <%= hidden_field_tag 'settings[default_colors]', '' %>
-  <%= select_tag('settings[default_colors]', "<option value=''></option>".html_safe+options_for_select(ProjectCustomField.where('name' => 'RTMaterial').first.possible_values, (@settings["default_colors"] || defaults["default_colors"]).to_s), multiple: false, class: 'rtmaterial_default_colors') %>
+  <%= select_tag('settings[default_colors]', "<option value=''></option>".html_safe+options_for_select(::COLOR_SCHEME, (@settings["default_colors"] || defaults["default_colors"]).to_s), multiple: false, class: 'rtmaterial_default_colors') %>
+</p>
+<p>
+  <label><%= l(:setting_change_icon) %></label>
+  <%= hidden_field_tag 'settings[change_icon]', '' %>
+  <%= check_box_tag('settings[change_icon]', (@settings["_change_icon"] || defaults["change_icon"]), class: 'rtmaterial_change_icon') %>
 </p>
 
 <script>
   $(document).ready(function() {
-    $('.rtmaterial_default_colors').select2({allowClear: true});
+    if(typeof($('.rtmaterial_default_colors').select2) !== 'undefined') {
+        $('.rtmaterial_default_colors').select2({allowClear: true});
+    }
   });
 </script>
