--- a/app/views/layouts/_view_layouts_base_content.html.erb
+++ b/app/views/layouts/_view_layouts_base_content.html.erb
@@ -2,7 +2,7 @@
 color_scheme = @project.nil? ? Setting.plugin_redmine_rtmaterial['default_colors'] : @project.rtmaterial_current_color_scheme
 change_icon = @project.nil? ? Setting.plugin_redmine_rtmaterial['change_icon'] : @project.rtmaterial_current_change_icon
 %>
-<% if !color_scheme.blank? %>
+<% if !@current_theme.blank? && @current_theme.name.downcase == "rtmaterial" && !color_scheme.blank? %>
   <link rel="stylesheet" href="/themes/RTMaterial/stylesheets/colors/<%= color_scheme %>.css" type="text/css" />
   <% if !change_icon.blank? && change_icon %>
     <script>
